<package>
  <name>mav_description</name>
  <version>1.0.0</version>
  <description>collection of launch files and parameters</description>
  <maintainer email="markus.achtelik_devel@mavt.ethz.ch">Markus Achtelik</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/ethz-asl/mav_tools/issues</url>

  <author>Markus Achtelik</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

</package>
